--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -25,198 +25,210 @@
   <body>
     <!-- PAGE HEADER -->
     <header class="page-header">
-      <nav class="header-nav">
-        <a class="logo header-logo" href="./index.html"
-          >Web<span class="logo-part">Studio</span></a
-        >
-        <ul class="nav-list">
-          <li class="nav-item">
-            <a class="nav-link" href="./index.html">Studio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Portfolio</a>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
-        </ul>
-      </nav>
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a class="logo header-logo" href="./index.html"
+            >Web<span class="logo-part">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Studio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Portfolio</a>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
+          </ul>
+        </nav>
 
-      <address class="contacts">
-        <ul class="contacts-list">
-          <li class="contacts-item">
-            <a class="contacts-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contacts-item">
-            <a class="contacts-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <address class="contacts">
+          <ul class="contacts-list">
+            <li class="contacts-item">
+              <a class="contacts-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a class="contacts-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <!-- MAIN SECTION -->
     <main>
       <!-- HERO SECTION -->
       <section class="hero">
-        <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button class="hero-btn" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="main-title">Effective Solutions for Your Business</h1>
+          <button class="hero-btn" type="button">Order Service</button>
+        </div>
       </section>
       <!-- BENEFITS SECTION -->
       <section class="benefits">
-        <h2 hidden>Our benefits</h2>
-        <ul class="benefits-list">
-          <li class="benefits-item">
-            <h3 class="section-subtitle">Strategy</h3>
-            <p class="benefits-desc">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h3 class="section-subtitle">Punctuality</h3>
-            <p class="benefits-desc">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h3 class="section-subtitle">Diligence</h3>
-            <p class="benefits-desc">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h3 class="section-subtitle">Technologies</h3>
-            <p class="benefits-desc">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 hidden>Our benefits</h2>
+          <ul class="benefits-list">
+            <li class="benefits-item">
+              <h3 class="section-subtitle">Strategy</h3>
+              <p class="benefits-desc">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="section-subtitle">Punctuality</h3>
+              <p class="benefits-desc">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="section-subtitle">Diligence</h3>
+              <p class="benefits-desc">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="section-subtitle">Technologies</h3>
+              <p class="benefits-desc">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- TEAM SECTION -->
       <section class="team">
-        <h2 class="section-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img
-              src="./images/team/mark-guerrero.jpg"
-              alt="Mark Guerrero avatar"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-subtitle">Mark Guerrero</h3>
-            <p class="team-desc">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/team/tom-ford.jpg"
-              alt="Tom Ford avatar"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-subtitle">Tom Ford</h3>
-            <p class="team-desc">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/team/camila-garcia.jpg"
-              alt="Camila Garcia avatar"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-subtitle">Camila Garcia</h3>
-            <p class="team-desc">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/team/daniel-wilson.jpg"
-              alt="Daniel Wilson avatar"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-subtitle">Daniel Wilson</h3>
-            <p class="team-desc">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                src="./images/team/mark-guerrero.jpg"
+                alt="Mark Guerrero avatar"
+                width="264"
+                height="260"
+              />
+              <h3 class="section-subtitle">Mark Guerrero</h3>
+              <p class="team-desc">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team/tom-ford.jpg"
+                alt="Tom Ford avatar"
+                width="264"
+                height="260"
+              />
+              <h3 class="section-subtitle">Tom Ford</h3>
+              <p class="team-desc">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team/camila-garcia.jpg"
+                alt="Camila Garcia avatar"
+                width="264"
+                height="260"
+              />
+              <h3 class="section-subtitle">Camila Garcia</h3>
+              <p class="team-desc">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team/daniel-wilson.jpg"
+                alt="Daniel Wilson avatar"
+                width="264"
+                height="260"
+              />
+              <h3 class="section-subtitle">Daniel Wilson</h3>
+              <p class="team-desc">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- PORTFOLIO SECTION -->
       <section class="portfolio" id="portfolio">
-        <h2 class="section-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li>
-            <img
-              src="./images/portfolio/banking.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-subtitle">Banking App</h3>
-            <p class="portfolio-desc">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio/cashless.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-subtitle">Cashless Payment</h3>
-            <p class="portfolio-desc">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio/meditation.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-subtitle">Meditation App</h3>
-            <p class="portfolio-desc">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio/taxi.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-subtitle">Taxi Service</h3>
-            <p class="portfolio-desc">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio/screen.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-subtitle">Screen Illustrations</h3>
-            <p class="portfolio-desc">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio/online.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-subtitle">Online Courses</h3>
-            <p class="portfolio-desc">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li>
+              <img
+                src="./images/portfolio/banking.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <h3 class="section-subtitle">Banking App</h3>
+              <p class="portfolio-desc">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio/cashless.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h3 class="section-subtitle">Cashless Payment</h3>
+              <p class="portfolio-desc">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio/meditation.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <h3 class="section-subtitle">Meditation App</h3>
+              <p class="portfolio-desc">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio/taxi.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h3 class="section-subtitle">Taxi Service</h3>
+              <p class="portfolio-desc">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio/screen.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h3 class="section-subtitle">Screen Illustrations</h3>
+              <p class="portfolio-desc">Design</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio/online.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h3 class="section-subtitle">Online Courses</h3>
+              <p class="portfolio-desc">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="page-footer">
-      <a class="logo footer-logo" href="./index.html"
-        >Web<span class="logo-part">Studio</span></a
-      >
-      <p class="footer-desc">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container footer-container">
+        <a class="logo footer-logo" href="./index.html"
+          >Web<span class="logo-part">Studio</span></a
+        >
+        <p class="footer-desc">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
