--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
       </section>
       <!-- BENEFITS SECTION -->
-      <section class="benefits">
+      <section class="section benefits">
         <div class="container">
           <h2 hidden>Our benefits</h2>
           <ul class="benefits-list">
@@ -103,7 +103,7 @@
         </div>
       </section>
       <!-- TEAM SECTION -->
-      <section class="team">
+      <section class="section team">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="team-list">
@@ -151,7 +151,7 @@
         </div>
       </section>
       <!-- PORTFOLIO SECTION -->
-      <section class="portfolio" id="portfolio">
+      <section class="section portfolio" id="portfolio">
         <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="portfolio-list">
