add benefits footer

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <!-- BENEFITS SECTION -->
       <section class="section benefits">
         <div class="container">
-          <h2 hidden>Our benefits</h2>
+          <h2 class="visually-hidden">Our benefits</h2>
           <ul class="benefits-list">
             <li class="benefits-item">
               <h3 class="section-subtitle">Strategy</h3>
@@ -220,7 +220,7 @@
       </section>
     </main>
     <footer class="page-footer">
-      <div class="container footer-container">
+      <div class="container">
         <a class="logo footer-logo" href="./index.html"
           >Web<span class="logo-part">Studio</span></a
         >
