--- a/index.html
+++ b/index.html
@@ -114,8 +114,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="section-subtitle">Mark Guerrero</h3>
-              <p class="team-desc">Product Designer</p>
+              <div class="team-content">
+                <h3 class="section-subtitle">Mark Guerrero</h3>
+                <p class="team-desc">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -124,8 +126,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="section-subtitle">Tom Ford</h3>
-              <p class="team-desc">Frontend Developer</p>
+              <div class="team-content">
+                <h3 class="section-subtitle">Tom Ford</h3>
+                <p class="team-desc">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -134,8 +138,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="section-subtitle">Camila Garcia</h3>
-              <p class="team-desc">Marketing</p>
+              <div class="team-content">
+                <h3 class="section-subtitle">Camila Garcia</h3>
+                <p class="team-desc">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -144,8 +150,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="section-subtitle">Daniel Wilson</h3>
-              <p class="team-desc">UI Designer</p>
+              <div class="team-content">
+                <h3 class="section-subtitle">Daniel Wilson</h3>
+                <p class="team-desc">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -155,65 +163,77 @@
         <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="portfolio-list">
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/portfolio/banking.jpg"
                 alt="Banking App"
                 width="360"
                 height="300"
               />
-              <h3 class="section-subtitle">Banking App</h3>
-              <p class="portfolio-desc">App</p>
+              <div class="portfolio-content">
+                <h3 class="section-subtitle">Banking App</h3>
+                <p class="portfolio-desc">App</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/portfolio/cashless.jpg"
                 alt="Cashless Payment"
                 width="360"
                 height="300"
               />
-              <h3 class="section-subtitle">Cashless Payment</h3>
-              <p class="portfolio-desc">Marketing</p>
+              <div class="portfolio-content">
+                <h3 class="section-subtitle">Cashless Payment</h3>
+                <p class="portfolio-desc">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/portfolio/meditation.jpg"
                 alt="Meditation App"
                 width="360"
                 height="300"
               />
-              <h3 class="section-subtitle">Meditation App</h3>
-              <p class="portfolio-desc">App</p>
+              <div class="portfolio-content">
+                <h3 class="section-subtitle">Meditation App</h3>
+                <p class="portfolio-desc">App</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/portfolio/taxi.jpg"
                 alt="Taxi Service"
                 width="360"
                 height="300"
               />
-              <h3 class="section-subtitle">Taxi Service</h3>
-              <p class="portfolio-desc">Marketing</p>
+              <div class="portfolio-content">
+                <h3 class="section-subtitle">Taxi Servicet</h3>
+                <p class="portfolio-desc">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/portfolio/screen.jpg"
                 alt="Screen Illustrations"
                 width="360"
                 height="300"
               />
-              <h3 class="section-subtitle">Screen Illustrations</h3>
-              <p class="portfolio-desc">Design</p>
+              <div class="portfolio-content">
+                <h3 class="section-subtitle">Screen Illustrationt</h3>
+                <p class="portfolio-desc">Design</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/portfolio/online.jpg"
                 alt="Online Courses"
                 width="360"
                 height="300"
               />
-              <h3 class="section-subtitle">Online Courses</h3>
-              <p class="portfolio-desc">Marketing</p>
+              <div class="portfolio-content">
+                <h3 class="section-subtitle">Online Courses</h3>
+                <p class="portfolio-desc">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
